# aocli

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/: publish.yml
.github/workflows/: publish.yml
src/aoc_utils/: __init__.py  cli.py  console.py  constants.py  data.py  functional.py  io.py  session.py
src/aocli/: __init__.py  constants.py  functional.py  session.py
