[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aocli"
readme = "README.md"
requires-python = ">3.9"
license = {file = "LICENSE"}
authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
keywords = ["advent-of-code", "advent of code", "aoc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "lxml >=4.9.0",
    "requests >=2.28.0",
    "rich >=12.4.4",
    "typer >=0.4.1",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "autoflake >=1.4",
    "black >=22.3.0",
    "flake8 >=4.0.1",
    "isort >=5.10.1",
    "mypy >=0.961",
    "pre-commit >=2.19.0",
    "pyupgrade >=2.34.0",
]

[project.urls]
Home = "https://github.com/sgraaf/aocli"

[project.scripts]
aocli = "aocli.cli:app"

[tool.isort]
profile = "black"
multi_line_output = 3
